Closed
Bug 1331966
Opened 9 years ago
Closed 9 years ago
Autophone testAdobeFlash | application crashed [@ js::RunScript] after "Assertion failure: cx->compartment()->isSystem() || cx->runtime()->allowContentJS()"
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla54
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | unaffected |
| firefox53 | --- | fixed |
| firefox54 | --- | fixed |
People
(Reporter: RyanVM, Assigned: billm)
References
Details
(Keywords: assertion, crash, intermittent-failure, Whiteboard: [stockwell fixed])
Attachments
(1 file)
|
1.33 KB,
patch
|
dvander
:
review+
ritu
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Showed up on m-c after today's merge from inbound. We don't run the full set of Autophone tests on the integration branches (they're Tier 2 and resource-limited), so this went unnoticed previously. It's permafailing, however.
Bill, can you please take a look ASAP? I've CCed Bob Clary (maintainer of the Autophone tests) to this bug as well in case you need help reproducing.
https://treeherder.mozilla.org/logviewer.html#?job_id=69972506&repo=mozilla-central
https://treeherder.mozilla.org/logviewer.html#?job_id=69976719&repo=mozilla-central
Flags: needinfo?(wmccloskey)
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 2•9 years ago
|
||
I couldn't figure out a better way to fix this. Flash on Android calls into content JS during painting. Luckily we don't need this assertion on Android. So I just made it conditional on the platform.
Assignee: nobody → wmccloskey
Flags: needinfo?(wmccloskey)
Attachment #8828436 -
Flags: review?(dvander)
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Attachment #8828436 -
Flags: review?(dvander) → review+
| Comment hidden (Intermittent Failures Robot) |
Pushed by wmccloskey@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/84cc3465ba3e
Don't assert against content JS during painting on Android (r=dvander)
Comment 7•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
| Comment hidden (Intermittent Failures Robot) |
| Reporter | ||
Comment 9•9 years ago
|
||
Thanks for the fix, Bill. Please request Aurora uplift on this when you get a chance.
| Assignee | ||
Comment 10•9 years ago
|
||
Comment on attachment 8828436 [details] [diff] [review]
patch
Approval Request Comment
[Feature/Bug causing the regression]:bug 1328423
[User impact if declined]: Flash on Android might crash unexpectedly
[Is this code covered by automated tests?]:yes
[Has the fix been verified in Nightly?]:yes
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]:none
[Is the change risky?]:no
[Why is the change risky/not risky?]:just removes an assertion
[String changes made/needed]:none
Flags: needinfo?(wmccloskey)
Attachment #8828436 -
Flags: approval-mozilla-aurora?
Comment on attachment 8828436 [details] [diff] [review]
patch
Fixes an intermittent failure, Aurora53+
Attachment #8828436 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Reporter | ||
Comment 12•9 years ago
|
||
| bugherder uplift | ||
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Updated•9 years ago
|
Whiteboard: [stockwell fixed]
You need to log in
before you can comment on or make changes to this bug.
Description
•