Bug 1331966 - Don't assert against content JS during painting on Android. r=dvander, a=ritu

MozReview-Commit-ID: HU8V8jeBFX